--- a/src/templates/nova_movimentacao.html
+++ b/src/templates/nova_movimentacao.html
@@ -119,7 +119,7 @@
   <select name="motivo">
     <option value="">-- Selecione --</option>
     <option value="manutenção">Manutenção</option>
-    <option value="preventiva">Preventiva</option>
+    <option value="">Empréstimo</option>
     <option value="teste">Teste</option>
     <option value="instalação">Instalação</option>
   </select><br>
